cursuri/users_code/sorynsoo-25-4.error
/eval-folder/sorynsoo-25-4.cpp: In function 'int main()':
/eval-folder/sorynsoo-25-4.cpp:10:1: error: expected ';' before '}' token
 }
 ^
